# Manulab

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  ManuLab.pro  README.md  bitbucket-pipelines.yml  main.cpp
cmake/: clangformat.cmake
filter/: CMakeLists.txt  coincidenceindex.cpp  coincidenceindex.h  distance.cpp  distance.h  entropy.cpp  entropy.h  filter.cpp  filter.h  frequency.cpp  frequency.h  indexofcoincidence.cpp  indexofcoincidence.h  interface.cpp  interface.h  orientation.cpp  orientation.h  reverse.cpp  reverse.h  search.cpp  search.h  select.cpp  select.h  settingsDialog.cpp  settingsDialog.h  substitution.cpp  substitution.h  worker.cpp  worker.h
helpers/: CMakeLists.txt  imagepool.cpp  imagepool.h
manulab/: CMakeLists.txt
project/: CMakeLists.txt  config.cpp  config.h  page.cpp  page.h  pages.cpp  pages.h  path.cpp  path.h
src/: CMakeLists.txt  main.cpp
src/filter/: CMakeLists.txt  distance.cpp  distance.h  entropy.cpp  entropy.h  filter.cpp  frequency.cpp  frequency.h  indexofcoincidence.cpp  orientation.cpp  reverse.cpp  search.cpp  search.h  select.h  settingsDialog.cpp  settingsDialog.h  worker.cpp  worker.h
src/helpers/: CMakeLists.txt  imagepool.cpp  imagepool.h
src/project/: CMakeLists.txt  page.cpp  page.h  pages.h
src/resources/: resources.qrc
src/ui/: CMakeLists.txt  filterlist.cpp  filtermanager.h  imageviewer.cpp  mainwindow.h  mainwindow.ui  newproject.cpp  newproject.h  texteditor.cpp  thumbnaillabel.h  thumbnailslider.cpp  thumbnailslider.h
ui/: CMakeLists.txt  ListView.cpp  ListView.h  filterlist.cpp  filterlist.h  filtermanager.cpp  filtermanager.h  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  newproject.cpp  newproject.h  newproject.ui  texteditor.cpp  texteditor.h  thumbnaillabel.cpp  thumbnaillabel.h  thumbnailslider.cpp  thumbnailslider.h
